# TODO split CMakeLists.txt

CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

PROJECT( shadowgrounds )
SET( CPACK_PACKAGE_VERSION_MAJOR    1 )
SET( CPACK_PACKAGE_VERSION_MINOR    0 )
SET( CPACK_PACKAGE_VERSION_PATCH    4 )
SET( SG_PROG_VERSION                "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

SET( CMAKE_VERBOSE_MAKEFILE  OFF )

SET(SG_CMAKE_DIR "${shadowgrounds_SOURCE_DIR}/cmake")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${SG_CMAKE_DIR}")

# ------------------------------------------------
#  Libraries
# ------------------------------------------------

SET( Boost_USE_STATIC_LIBS      OFF )
SET( Boost_USE_MULTITHREADED    ON )
SET( Boost_USE_STATIC_RUNTIME   OFF )
FIND_PACKAGE( Boost 1.56 REQUIRED
    program_options
    thread
    system
)
FIND_PACKAGE( SDL2 REQUIRED )
FIND_PACKAGE( SDL_sound REQUIRED )
FIND_PACKAGE( Vorbis REQUIRED ) # TODO: remove in favour of SDL2_sound
FIND_PACKAGE( SDL2_image REQUIRED )
FIND_PACKAGE( SDL2_ttf REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( GLEW REQUIRED )
FIND_PACKAGE( GTK2 REQUIRED )
FIND_PACKAGE( ZLIB REQUIRED )
FIND_PACKAGE( OpenAL REQUIRED )
FIND_PACKAGE( FFmpeg REQUIRED )

SET( GLOBAL_INCLUDE_DIRS
    ${Boost_INCLUDE_DIRS}
    ${SDL2_INCLUDE_DIR}
    ${SDL_SOUND_INCLUDE_DIR}
    ${VORBIS_INCLUDE_DIR}
    ${SDL2IMAGE_INCLUDE_DIR}
    ${SDL2TTF_INCLUDE_DIR}
    ${OPENGL_INCLUDE_DIR}
    ${GLEW_INCLUDE_PATH}
    ${GTK2_INCLUDE_DIRS}
    ${ZLIB_INCLUDE_DIRS}
    ${OPENAL_INCLUDE_DIR}
    ${FFMPEG_INCLUDE_DIRS}
)

SET( GLOBAL_LIBRARIES
    ${Boost_LIBRARIES}
    ${GTK2_LIBRARIES}
    ${SDL2_LIBRARY}
    ${SDL2MAIN_LIBRARY}
    ${SDL_SOUND_LIBRARY}
    ${VORBIS_FILE_LIBRARY} ${OGG_LIBRARY} ${VORBIS_LIBRARY} ###
    ${SDL2IMAGE_LIBRARY}
    ${SDL2TTF_LIBRARY}
    ${OPENGL_LIBRARIES}
    ${GLEW_LIBRARY}
    ${ZLIB_LIBRARIES}
    ${OPENAL_LIBRARY}
    ${AVCODEC_LIBRARIES}
    ${AVUTIL_LIBRARIES}
    ${SWSCALE_LIBRARIES}
    ${AVFORMAT_LIBRARIES}
)

INCLUDE_DIRECTORIES( BEFORE SYSTEM
    ${GLOBAL_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}
    engine/include
    # storm/include
    # storm/keyb3
)

add_subdirectory(engine)
add_subdirectory(sg-game)
