# TODO split CMakeLists.txt

CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

PROJECT( shadowgrounds )
SET( CPACK_PACKAGE_VERSION_MAJOR    1 )
SET( CPACK_PACKAGE_VERSION_MINOR    0 )
SET( CPACK_PACKAGE_VERSION_PATCH    4 )
SET( SG_PROG_VERSION                "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")

SET( CMAKE_VERBOSE_MAKEFILE  OFF )

SET(SG_CMAKE_DIR "${shadowgrounds_SOURCE_DIR}/cmake")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${SG_CMAKE_DIR}")

# ------------------------------------------------
#  Libraries
# ------------------------------------------------

SET( Boost_USE_STATIC_LIBS      OFF )
SET( Boost_USE_MULTITHREADED    ON )
SET( Boost_USE_STATIC_RUNTIME   OFF )
FIND_PACKAGE( Boost 1.56 REQUIRED
    program_options
    thread
    system
)
FIND_PACKAGE( Vorbis REQUIRED ) # TODO: remove in favour of SDL2_sound
FIND_PACKAGE( GTK2 REQUIRED )
FIND_PACKAGE( ZLIB REQUIRED )
FIND_PACKAGE( OpenAL REQUIRED )
FIND_PACKAGE( FFmpeg REQUIRED )
FIND_PACKAGE( GLFW REQUIRED )
FIND_PACKAGE( Vulkan REQUIRED )

SET( GLOBAL_INCLUDE_DIRS
    ${Boost_INCLUDE_DIRS}
    ${VORBIS_INCLUDE_DIR}
    ${GTK2_INCLUDE_DIRS}
    ${ZLIB_INCLUDE_DIRS}
    ${OPENAL_INCLUDE_DIR}
    ${FFMPEG_INCLUDE_DIRS}
    ${GLFW_INCLUDE_DIRS}
    ${VULKAN_INCLUDE_DIRS}
)

SET( GLOBAL_LIBRARIES
    ${Boost_LIBRARIES}
    ${GTK2_LIBRARIES}
    ${VORBIS_FILE_LIBRARY} ${OGG_LIBRARY} ${VORBIS_LIBRARY} ###
    ${ZLIB_LIBRARIES}
    ${OPENAL_LIBRARY}
    ${AVCODEC_LIBRARIES}
    ${AVUTIL_LIBRARIES}
    ${SWSCALE_LIBRARIES}
    ${AVFORMAT_LIBRARIES}
    ${GLFW_LIBRARIES}
    ${VULKAN_LIBRARIES}
)

INCLUDE_DIRECTORIES( BEFORE SYSTEM
    ${GLOBAL_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}
    engine/include
    # storm/include
    # storm/keyb3
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

add_subdirectory(sg-game)
